# coding_practices

./: .gitignore  AGENTS.md  slides.md  slides_custom.css  summary.md
.github/workflows/: render-talk.yml
bad/: josephson_messy.ipynb
clean/: CHANGELOG.md  CONTRIBUTING.md  README.md  pixi.toml  pyproject.toml
clean/docs/: architecture.md
clean/jj_supercurrent/: current.py  solver.py  systems.py
clean/scripts/: run_supercurrent.py
clean/src/jj_supercurrent/: __init__.py  current.py  solver.py  systems.py
clean/tests/: conftest.py  test_current.py  test_systems.py
