[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "jj-supercurrent"
version = "0.1.0"
description = "Numerical Josephson junction supercurrent demo with Kwant"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Group meeting demo" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "kwant>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["jj_supercurrent"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
